removed comment causing break, fixed mobile nav, add bg image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .menu li a {
-  font-size: 4em;
+  font-size: 3em;
 }
 
 .section {
@@ -55,9 +55,9 @@ nav .button:hover {
   color: white;
 }
 nav .button:active {
-  -webkit-box-shadow: 0px 4px 0px #a74d46;
-  -moz-box-shadow: 0px 4px 0px #a74d46;
-  box-shadow: 0px 4px 0px #a74d46;
+  -webkit-box-shadow: 0 4px 0 #a74d46;
+  -moz-box-shadow: 0 4px 0 #a74d46;
+  box-shadow: 0 4px 0 #a74d46;
   background: #e78129;
 }
 
@@ -85,7 +85,7 @@ p a {
   color: orange;
 }
 
-img.portrait {
+.portrait {
   height: 100%;
 }
 
@@ -220,4 +220,36 @@ img.portrait {
 
 #bg_container::before {
   left: 0;
+}
+
+
+@media (max-width: 640px) {
+  .menu > li > a {
+    font-size: 2em;
+  }
+
+  .fp-controlArrow {
+    position: absolute;
+    top: inherit;
+    bottom: 30px;
+  }
+
+  .fp-controlArrow.fp-prev {
+    border-width: 20.5px 16px 20.5px 0;
+  }
+
+  .fp-controlArrow.fp-next {
+    border-width: 20.5px 0 20.5px 16px;
+  }
+
+  #santoriniText {
+    right: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  #bg_container::before {
+    background-image: url('../images/mobile_background.jpg');
+    background-size: cover;
+  }
 }
